--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,11 @@
       "email": "jens.bremmekamp@chefkoch.de"
     }
   ],
+  "autoload": {
+    "psr-4": {
+      "Chefkoch\\": "src/Chefkoch"
+    }
+  },
   "require-dev": {
     "phpunit/phpunit": "4.1.*"
   }
