minor cleanup and better namespacing for tests

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,10 @@
   },
   "autoload": {
     "psr-4": {
-      "Chefkoch\\": "src/Chefkoch"
+      "Chefkoch\\Morphoji\\": "src"
     }
+  },
+  "autoload-dev": {
+    "psr-4": { "Chefkoch\\Morphoji\\Tests\\": "tests/" }
   }
 }
